task-86405-fixed profile page spacing issues in arabic view

--- a/application/views/css/common-rtl.css
+++ b/application/views/css/common-rtl.css
@@ -1515,7 +1515,7 @@ ul {
               flex-direction: column;
       padding: var(--padding-6) var(--padding-3); } }
   .calendar-view .fc-header-toolbar .fc-toolbar-chunk:first-child {
-    margin-left: auto; }
+    margin-right: auto; }
     @media (max-width: 767px) {
       .calendar-view .fc-header-toolbar .fc-toolbar-chunk:first-child {
         margin: auto; } }
