--- a/scss/common/modules/_custom_calendar.scss
+++ b/scss/common/modules/_custom_calendar.scss
@@ -322,7 +322,7 @@ $dashboard-calendar: "dashboard-calendar";
         }
         .fc-toolbar-chunk{
             &:first-child{
-                margin-#{theme('direction.right','value')}: auto;
+                margin-right: auto;
                 @media(max-width:theme('breakpoints.md','value')){
                     margin: auto;
                 }
